[package]
name = "TEMPLATE_PROJECT_NAME"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
description = "{{description}}"
license = "AGPL-3.0-or-later"

[dependencies]
bevy_math = "0.13"
eframe = "0.26"
egui = "0.26"
egui_plot = "0.26"
env_logger = "0.11.3"
image = "0.25.1"
itertools = "0.12.1"
rfd = "0.14.1"
emath = "0.26"
bevy_core = "0.13"
serde = { version = "1.0.201", features = ["derive"] }
derive_more = "0.99.17"
toml = "0.8.13"
log = "0.4.17"
clap = { version = "4.0.32", features = ["derive", "color"] }
anyhow = "1.0.82"
strum = { version = "0.26.2", features = ["derive"] }
